--- a/_pages/storage-and-ram.html
+++ b/_pages/storage-and-ram.html
@@ -20,19 +20,19 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>Page Not Found – ExCALIBUR H&ES</title>
-	<meta name="description" content="Sorry – the page your looking for doesn't exist.">
+	<title>Storage and RAM as a service – ExCALIBUR H&ES</title>
+	<meta name="description" content="">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Page Not Found – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Sorry – the page your looking for doesn't exist.">
-	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
+	<meta name="twitter:title" content="Storage and RAM as a service – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/bluefield-2.png">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="Page Not Found – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Sorry – the page your looking for doesn't exist." />
-	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
+	<meta property="og:title" content="Storage and RAM as a service – ExCALIBUR H&ES" />
+	<meta property="og:description" content="" />
+	<meta property="og:image" content="http://localhost:4000/images/bluefield-2.png" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/404.html">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/storage-and-ram.html">
 
 
 	<header class="header">
@@ -126,25 +126,54 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="Page Not Found – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="Storage and RAM as a service – ExCALIBUR H&ES">
 
-			<section class="hero">
+			<section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url(/images/feature.jpg)">
+	<div class="hero__image" style="background-image: url(/images/bluefield-2.png)">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>Page not found.</h1>
-		<p class="hero__text editable">Sorry – the page your looking for doesn't exist.</p>
-		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have moved.</p>
-		<p><a href="/" class="button button--large">Back To Home</a></p>
+		<h1>Storage and RAM as a service</h1>
+		<p>Durham University</p>
 
 	</div>
 
 </section>
 
+<section class="single">
+
+	<div class="wrap">
+
+		<article class="single-post">
+
+			The Durham Adaptable Memory System has distinct components that are required to investigate adaptable memory technologies that will function as a testbed and demonstrator for the ExCALIBUR HES programme.  These components, namely a [BlueField-2](https://www.nvidia.com/content/dam/en-zz/Solutions/Data-Center/documents/datasheet-nvidia-bluefield-2-dpu.pdf) cluster and a [Gen-Z](https://genzconsortium.org/) equipped cluster.
+
+This will be the first UK install of both BlueField-2 and Gen-Z for HPC.  Prior expertise in BlueField-1 exists at Durham, with an earlier 16 node system already in operation.  Both of these systems will be integrated with [COSMA](https://www.dur.ac.uk/icc/cosma/), allowing the existing login nodes, LDAP servers and administration consoles to be used.  Users will be able to request an account through the [SAFE](http://www.epcc.ed.ac.uk/facilities/support/safe) system managed by EPCC.
+
+![BlueField-2 card](images/bluefield-2.png){:style="float: right; width: 320px; height: 220px; padding: 15px;"}
+
+BlueField-2 technology is not yet available on the market, and so we will be getting pre-release access for this proof of concept (PoC) cluster. BlueField-2 has significant advantages over the original BlueField-1 cards, namely increased processing power and clock rate of the embedded ARM cores.
+
+This is therefore an ideal time to realise this test cluster environment, placing the UK on the leading edge of this novel technology.  The expertise exists within Durham based on experience with BlueField-1 systems.
+
+Gen-Z technology is also not yet available on the market.  However, Durham University have joined the Gen-Z consortium, and will have access to pre-market proof of concept equipment which will be obtained as part of this proposal.  This will place the UK in an advantageous position to test and evaluate this new technology.
+
+## Access to the testbed systems
+
+The Excalibur H&ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.
+
+<a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a>
+
+
+
+		</article>
+
+	</div>
+
+</section>
 
 		</div>
 
