--- a/_pages/governance.html
+++ b/_pages/governance.html
@@ -27,12 +27,12 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="ExCALIBUR H&ES Governance – ExCALIBUR H&ES">
 	<meta name="twitter:description" content="Oversight of the ExCALIBUR H&amp;ES programme">
-	<meta name="twitter:image:src" content="https://ukri-excalibur.github.io/images/feature.jpg">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
 	<meta property="og:title" content="ExCALIBUR H&ES Governance – ExCALIBUR H&ES" />
 	<meta property="og:description" content="Oversight of the ExCALIBUR H&amp;ES programme" />
-	<meta property="og:image" content="https://ukri-excalibur.github.io/images/feature.jpg" />
+	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="https://ukri-excalibur.github.io" data-page-url="/_pages/governance.html">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/_pages/governance.html">
 
 
 	<header class="header">
@@ -238,7 +238,7 @@ A key requirement will be to produce an accepted methodology and process that en
 		<p class="footer__text">ExCALIBUR - Exascale Computing ALgorithms and Infrastructures Benefitting UK Research</p>
 
 		<div class="footer__copyright">
-			<span>© 2020 ExCALIBUR H&ES</span>
+			<span>© 2021 ExCALIBUR H&ES</span>
 			<a href="https://jekyllthemes.io" target="_blank">Jekyll Themes</a>
 		</div>
 
