--- a/arm-gpu.html
+++ b/arm-gpu.html
@@ -20,19 +20,19 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>Page Not Found – ExCALIBUR H&ES</title>
-	<meta name="description" content="Sorry – the page your looking for doesn't exist.">
+	<title>ARM+GPU Demonstrator – ExCALIBUR H&ES</title>
+	<meta name="description" content="">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Page Not Found – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Sorry – the page your looking for doesn't exist.">
-	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
+	<meta name="twitter:title" content="ARM+GPU Demonstrator – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/v100.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="Page Not Found – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Sorry – the page your looking for doesn't exist." />
-	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
+	<meta property="og:title" content="ARM+GPU Demonstrator – ExCALIBUR H&ES" />
+	<meta property="og:description" content="" />
+	<meta property="og:image" content="http://localhost:4000/images/v100.jpg" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/404.html">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/arm-gpu">
 
 
 	<header class="header">
@@ -126,25 +126,59 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="Page Not Found – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="ARM+GPU Demonstrator – ExCALIBUR H&ES">
 
-			<section class="hero">
+			<section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url(/images/feature.jpg)">
+	<div class="hero__image" style="background-image: url(/images/v100.jpg)">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>Page not found.</h1>
-		<p class="hero__text editable">Sorry – the page your looking for doesn't exist.</p>
-		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have moved.</p>
-		<p><a href="/" class="button button--large">Back To Home</a></p>
+		<h1>ARM+GPU Demonstrator</h1>
+		<p>University of Leicester</p>
 
 	</div>
 
 </section>
 
+<section class="single">
+
+	<div class="wrap">
+
+		<article class="single-post">
+
+			<p>The aim of this testbed is to ensure that:</p>
+
+<p><img src="images/v100.jpg" alt="NVIDIA V100" style="float: right; width: 250px; height: 200px; padding: 15px;" /></p>
+
+<ul>
+  <li>ARM servers work harmoniously with accelerators (such GPUs)</li>
+  <li>Any shortcomings are understood, documented and reported to vendors</li>
+  <li>ExCALIBUR and the wider UK research community has access to an ARM-GPU testbed</li>
+</ul>
+
+<p><img src="images/thunderx2.jpg" alt="Cavium ThunderX2" style="float: right; width: 250px; height: 200px; padding: 15px;" /></p>
+
+<p>The ARM+GPU testbed system is based on HPE’s Apollo 70 platform and Marvell’s ThunderX2 processors, with 2x NVidia V100 GPU per server, incorporated into the University’s existing <a href="https://le.ac.uk/news/2018/april/new-supercomputer-heading-for-leicester">ARM Catalyst</a> system.</p>
+
+<p>The project includes Research Software Engineering (RSE) effort for the porting, benchmarking and development of existing codes to support the programme of work described above.  The RSE will also contribute to the creation of digital assets including progress reports, whitepapers and how-to documents, as well as software enhancements and modification. 
+The ARM+GPU testbed builds on the University of Leicester’s existing experience managing ARM based HPC systems, our Software engineering team’s CUDA expertise, and our existing relationship with the technical teams at ARM.</p>
+
+<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+
+<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+
+<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+
+
+
+		</article>
+
+	</div>
+
+</section>
 
 		</div>
 
