--- a/graphcore.html
+++ b/graphcore.html
@@ -20,19 +20,19 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>Page Not Found – ExCALIBUR H&ES</title>
-	<meta name="description" content="Sorry – the page your looking for doesn't exist.">
+	<title>Graphcore testbed – ExCALIBUR H&ES</title>
+	<meta name="description" content="">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Page Not Found – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Sorry – the page your looking for doesn't exist.">
-	<meta name="twitter:image:src" content="http://localhost:4000/images/feature.jpg">
+	<meta name="twitter:title" content="Graphcore testbed – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/gc20-ipu.png">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="Page Not Found – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Sorry – the page your looking for doesn't exist." />
-	<meta property="og:image" content="http://localhost:4000/images/feature.jpg" />
+	<meta property="og:title" content="Graphcore testbed – ExCALIBUR H&ES" />
+	<meta property="og:description" content="" />
+	<meta property="og:image" content="http://localhost:4000/images/gc20-ipu.png" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/404.html">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/graphcore">
 
 
 	<header class="header">
@@ -126,25 +126,52 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="Page Not Found – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="Graphcore testbed – ExCALIBUR H&ES">
 
-			<section class="hero">
+			<section class="hero hero--single">
 
-	<div class="hero__image" style="background-image: url(/images/feature.jpg)">
+	<div class="hero__image" style="background-image: url(/images/gc20-ipu.png)">
 		<div class="hero__overlay"></div>
 	</div>
 
 	<div class="wrap">
 
-		<h1>Page not found.</h1>
-		<p class="hero__text editable">Sorry – the page your looking for doesn't exist.</p>
-		<p class="hero__text editable">Perhaps you typed the URL incorrectly, or it may have moved.</p>
-		<p><a href="/" class="button button--large">Back To Home</a></p>
+		<h1>Graphcore testbed</h1>
+		<p>University of Bristol</p>
 
 	</div>
 
 </section>
 
+<section class="single">
+
+	<div class="wrap">
+
+		<article class="single-post">
+
+			<p>This testbed will evaluate the <a href="https://www.graphcore.ai/">Graphcore IPU-M2000</a> system for high performance and scientific computing applications and provide a novel architecture for the community to test and develop AI compatible codes on.</p>
+
+<p><img src="images/ipu-m2000.jpg" alt="Graphcore IPU-M2000" style="float: right; width: 350px; height: 250px; padding: 15px;" /></p>
+
+<p>The IPU (Intelligent Processing Unit) is a completely new kind of massively parallel processor, co-designed from the ground up to accelerate machine intelligence. Each MK2 GC200 IPU in the IPU-M2000 unit has 1472 processor cores, running nearly 9,000 independent parallel program threads with 900MB in processor memory and 250 TeraFlops of AI compute at FP16.16 and FP16.SR (stochastic rounding). The IPU-M2000 system has four IPUs, delivering approximately 1 PetaFlop of AI compute, and supporting ultra-low latency IPU-Fabric interconnect.</p>
+
+<p>The testbed includes four IPU-M2000 systems, which will enable the interconnect to be tested and characterised. The project will evaluate the Graphcore system’s intended use cases around AI training and interference, and also look at a subset of HPC codes that may be suitable for this platform.</p>
+
+<p>The Graphcore system will also be made available to the ExCALIBUR and wider UK research community with support and a training programme from the Bristol team. It should be noted that codes will need to fit into small memories and must be single or half precision due to IPU requirements.</p>
+
+<h2 id="access-to-the-testbed-systems">Access to the testbed systems</h2>
+
+<p>The Excalibur H&amp;ES testbeds are prioritised for access by ExCALIBUR projects, but also available for use by the wider UK research community - contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry">programme office</a> to discuss your requirements. Please note that the testbeds are offered on a best efforts basis rather than a service footing, as befits their experimental status.</p>
+
+<p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20testbed%20access%20enquiry" class="button button--large">Get in touch</a></p>
+
+
+
+		</article>
+
+	</div>
+
+</section>
 
 		</div>
 
