--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="ExCALIBUR H&ES – ExCALIBUR Hardware and Enabling Software">
 	<meta name="twitter:description" content="Exascale supercomputing testbeds for UK research and innovation">
-	<meta name="twitter:image:src" content="https://ukri-excalibur.github.io/images/home.jpg">
+	<meta name="twitter:image:src" content="http://localhost:4000/images/home.jpg">
 
 	<!-- Facebook OpenGraph -->
 	<meta property="og:title" content="ExCALIBUR H&ES – ExCALIBUR Hardware and Enabling Software" />
 	<meta property="og:description" content="Exascale supercomputing testbeds for UK research and innovation" />
-	<meta property="og:image" content="https://ukri-excalibur.github.io/images/home.jpg" />
+	<meta property="og:image" content="http://localhost:4000/images/home.jpg" />
 
 	
 	<!-- Font Embed Code -->
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="https://ukri-excalibur.github.io" data-page-url="/">
+<body class="loading ajax-loading" data-site-url="http://localhost:4000" data-page-url="/">
 
 
 	<header class="header">
@@ -218,7 +218,7 @@
 		<p class="footer__text">ExCALIBUR - Exascale Computing ALgorithms and Infrastructures Benefitting UK Research</p>
 
 		<div class="footer__copyright">
-			<span>© 2020 ExCALIBUR H&ES</span>
+			<span>© 2021 ExCALIBUR H&ES</span>
 			<a href="https://jekyllthemes.io" target="_blank">Jekyll Themes</a>
 		</div>
 
